@@ -850,7 +850,7 @@ we store it in C<@raw> as "--proximate".
 
 
 sub mutex_options {
-    # This list is machine-generated by crank-mutex.  Do not modify it by hand.
+    # This list is machine-generated by dev/crank-mutex.  Do not modify it by hand.
 
     return {
         1 => {
@@ -965,6 +965,7 @@ sub mutex_options {
             c => 1,
             column => 1,
             f => 1,
+            'files-from' => 1,
             g => 1,
             group => 1,
             h => 1,
@@ -980,6 +981,11 @@ sub mutex_options {
             v => 1,
             x => 1,
         },
+        'files-from' => {
+            f => 1,
+            g => 1,
+            x => 1,
+        },
         g => {
             A => 1,
             B => 1,
@@ -990,6 +996,7 @@ sub mutex_options {
             c => 1,
             column => 1,
             f => 1,
+            'files-from' => 1,
             g => 1,
             group => 1,
             h => 1,
@@ -1146,9 +1153,11 @@ sub mutex_options {
         },
         x => {
             f => 1,
+            'files-from' => 1,
             g => 1,
         },
     };
+
 }   # End of mutex_options()
 
 
